specify when to run

--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -1,6 +1,10 @@
 name: Docker Image CI
 
-on: [push]
+on:
+  push:
+    paths:
+    - '.github/DockerFile_ubuntu'
+    - '.github/workflows/dockerimage.yml'
 
 jobs:
 
