--- a/.github/DockerFile_ubuntu
+++ b/.github/DockerFile_ubuntu
@@ -3,10 +3,24 @@ FROM ubuntu:bionic
 ENV HOME /root
 
 RUN apt-get update -y && apt-get upgrade -y && \
-    apt-get -y install \
+    apt-get -y install --no-install-recommends \
         gnupg2 \
         software-properties-common \
         wget && \
-        wget https://www.salome-platform.org/downloads/previous-versions/salome-v9.3/DownloadDistr?platform=OS1.UB18.04&version=9.3.0
+        wget https://www.salome-platform.org/downloads/previous-versions/salome-v9.3/DownloadDistr?platform=OS1.UB18.04&version=9.3.0 && \
+            apt-get -y update && \
+    apt-get install -y \
+        build-essential \
+        python3-dev \
+        python3-pip && \
+    python3 -m pip install --upgrade pip && \
+    pip3 install \
+        numpy \
+        scipy && \
+    apt-get -y remove \
+        gnupg2 \
+        software-properties-common \
+        wget && \
+    apt-get clean
 
 WORKDIR $HOME
