--- a/.github/DockerFile_ubuntu
+++ b/.github/DockerFile_ubuntu
@@ -2,25 +2,20 @@ FROM ubuntu:bionic
 
 ENV HOME /root
 
-RUN apt-get update -y && apt-get upgrade -y && \
-    apt-get -y install --no-install-recommends \
-        gnupg2 \
+RUN apt-get update -y && apt-get upgrade -y
+
+RUN apt-get -y install --no-install-recommends \
         software-properties-common \
-        wget && \
-        wget https://www.salome-platform.org/downloads/previous-versions/salome-v9.3/DownloadDistr?platform=OS1.UB18.04&version=9.3.0 && \
-            apt-get -y update && \
-    apt-get install -y \
+        wget \
         build-essential \
-        python3-dev \
-        python3-pip && \
-    python3 -m pip install --upgrade pip && \
-    pip3 install \
-        numpy \
-        scipy && \
-    apt-get -y remove \
-        gnupg2 \
+        python-dev \
+        python3-dev
+
+RUN wget https://www.salome-platform.org/downloads/previous-versions/salome-v9.3/DownloadDistr?platform=OS1.UB18.04&version=9.3.0
+
+RUN apt-get -y remove \
         software-properties-common \
-        wget && \
-    apt-get clean
+        wget
+RUN apt-get clean apt-get autoremove
 
 WORKDIR $HOME
