running script with py2 and py3

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,5 +20,8 @@ jobs:
     steps:
     - uses: actions/checkout@v2-beta
 
-    - name: Running tests
+    - name: Running tests with python 2
+      run: python2 tests/hello_world.py
+
+    - name: Running tests with python 3
       run: python3 tests/hello_world.py
