--- a/.github/DockerFile_ubuntu
+++ b/.github/DockerFile_ubuntu
@@ -11,7 +11,9 @@ RUN apt-get -y install --no-install-recommends \
         python-dev \
         python3-dev
 
-RUN wget https://www.salome-platform.org/downloads/previous-versions/salome-v9.3/DownloadDistr?platform=OS1.UB18.04&version=9.3.0
+# getting salome 9.3
+RUN wget "https://www.salome-platform.org/downloads/previous-versions/salome-v9.3/DownloadDistr?platform=OS1.UB18.04&version=9.3.0" -O salome_9_3.tar.gz
+RUN tar xzf salome_9_3.tar.gz
 
 RUN apt-get -y remove \
         software-properties-common \
