--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,4 +27,5 @@ jobs:
       run: python3 tests/hello_world.py
 
     - name: Running tests in Salome
-      run: salome_9_3/salome -t python tests/hello_world.py
+      run: ls
+      # run: salome_9_3/salome -t python tests/hello_world.py
