--- a/.github/docker_ubuntu/DockerFile
+++ b/.github/docker_ubuntu/DockerFile
@@ -10,10 +10,13 @@ RUN apt-get update -y && apt-get -y install --no-install-recommends \
     python3-dev \
     && rm -rf /var/lib/apt/lists/* && \
     # getting salome 9.3
-    wget "https://www.salome-platform.org/downloads/previous-versions/salome-v9.3/DownloadDistr?platform=OS1.UB18.04&version=9.3.0" -O salome_9_3.tar.gz && \
+    wget -nv "https://www.salome-platform.org/downloads/previous-versions/salome-v9.3/DownloadDistr?platform=OS1.UB18.04&version=9.3.0" -O salome_9_3.tar.gz && \
     tar xzf salome_9_3.tar.gz && \
     rm salome_9_3.tar.gz && \
     mv SALOME-9.3.0-UB18.04-SRC $HOME/salome_9_3 && \
+    # remove unnecessary files
+    rm -rf $HOME/salome_9_3/ARCHIVES/ && \
+    rm -rf $HOME/salome_9_3/SOURCES/ && \
     #
     apt-get -y remove \
         software-properties-common \
