--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -19,8 +19,16 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
+    - name: Echo salome version (${{ matrix.salome-version }})
+    run: |
+      if [ ${{ matrix.salome-version }} == 8-4 ]; then echo ${{ matrix.salome-version }}; fi
+      if [ ${{ matrix.salome-version }} == 8-5 ]; then echo ${{ matrix.salome-version }}; fi
+      if [ ${{ matrix.salome-version }} == 9-2 ]; then echo ${{ matrix.salome-version }}; fi
+      if [ ${{ matrix.salome-version }} == 9-3 ]; then echo ${{ matrix.salome-version }}; fi
+      if [ ${{ matrix.salome-version }} == 9-4 ]; then echo ${{ matrix.salome-version }}; fi
+
     - name: Build the Docker image for salome version ${{ matrix.salome-version }}
-      run: docker build . --file .github/docker_ubuntu_bionic/DockerFile --tag philbucher/salome-kratos-docker-ubuntu-18-04-salome-${{ matrix.salome-version }}
+    run: docker build . --file .github/docker_ubuntu_bionic/DockerFile --tag philbucher/salome-kratos-docker-ubuntu-18-04-salome-${{ matrix.salome-version }}
 
     - name: Docker Login
       uses: azure/docker-login@v1
