--- a/.github/docker_ubuntu_bionic/DockerFile
+++ b/.github/docker_ubuntu_bionic/DockerFile
@@ -5,20 +5,20 @@ ENV HOME /root
 RUN apt-get update -y && apt-get -y install --no-install-recommends \
     software-properties-common \
     wget \
-    # build-essential \
-    # python-dev \
-    # python3-dev \
-    # && rm -rf /var/lib/apt/lists/* && \
-    # # getting salome 9.3
-    # wget -nv "https://www.salome-platform.org/downloads/previous-versions/salome-v9.3/DownloadDistr?platform=OS1.UB18.04&version=9.3.0" -O salome_9_3.tar.gz && \
-    # tar xzf salome_9_3.tar.gz && \
-    # rm salome_9_3.tar.gz && \
-    # mv SALOME-9.3.0-UB18.04-SRC $HOME/salome_9_3 && \
-    # # remove unnecessary files
-    # rm -rf $HOME/salome_9_3/ARCHIVES/ && \
-    # rm -rf $HOME/salome_9_3/SOURCES/ && \
-    # # setting alias
-    # echo 'alias run_salome_9_3=${HOME}/salome_9_3/salome"' >> ~/.bashrc && \
+    build-essential \
+    python-dev \
+    python3-dev \
+    && rm -rf /var/lib/apt/lists/* && \
+    # getting salome 9.3
+    wget -nv "https://www.salome-platform.org/downloads/previous-versions/salome-v9.3/DownloadDistr?platform=OS1.UB18.04&version=9.3.0" -O salome_9_3.tar.gz && \
+    tar xzf salome_9_3.tar.gz && \
+    rm salome_9_3.tar.gz && \
+    mv SALOME-9.3.0-UB18.04-SRC $HOME/salome_9_3 && \
+    # remove unnecessary files
+    rm -rf $HOME/salome_9_3/ARCHIVES/ && \
+    rm -rf $HOME/salome_9_3/SOURCES/ && \
+    # setting alias
+    echo 'alias run_salome_9_3=${HOME}/salome_9_3/salome"' >> ~/.bashrc && \
     #
     apt-get -y remove \
         software-properties-common \
