restrict path The tests are anyway run with an old version of the docker image

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: Plugin CI
 on:
   push:
     paths:
-    - '.github/**'
+    - '.github/workflows/ci.yml'
     - 'plugin/**'
     - 'tests/**'
 
