--- a/.github/docker_ubuntu_bionic/DockerFile
+++ b/.github/docker_ubuntu_bionic/DockerFile
@@ -10,19 +10,21 @@ RUN apt-get update -y && apt-get -y install --no-install-recommends \
     python3-dev \
     && rm -rf /var/lib/apt/lists/* && \
     # getting salome 9.3
-    wget -nv "https://www.salome-platform.org/downloads/previous-versions/salome-v9.3/DownloadDistr?platform=OS1.UB18.04&version=9.3.0" -O salome_9_3.tar.gz && \
-    tar xzf salome_9_3.tar.gz && \
-    rm salome_9_3.tar.gz && \
-    mv SALOME-9.3.0-UB18.04-SRC $HOME/salome_9_3 && \
+    wget -nv "https://www.salome-platform.org/downloads/previous-versions/salome-v9.3/DownloadDistr?platform=OS1.UB18.04&version=9.3.0" -O salome_dir.tar.gz && \
+    tar xzf salome_dir.tar.gz && \
+    rm salome_dir.tar.gz && \
+    mv SALOME-9.3.0-UB18.04-SRC $HOME/salome_dir && \
     # remove unnecessary files
-    rm -rf $HOME/salome_9_3/ARCHIVES/ && \
-    rm -rf $HOME/salome_9_3/SOURCES/ && \
+    rm -rf $HOME/salome_dir/ARCHIVES/ && \
+    rm -rf $HOME/salome_dir/SOURCES/ && \
     # setting alias
-    echo 'alias run_salome_9_3=${HOME}/salome_9_3/salome"' >> ~/.bashrc && \
+    echo 'alias run_salome_9_3=${HOME}/salome_dir/salome"' >> ~/.bashrc && \
     #
     apt-get -y remove \
         software-properties-common \
         wget && \
     apt-get clean apt-get autoremove
+
+CMD ["${HOME}/salome_dir/salome"]
 
 WORKDIR $HOME
