--- a/.github/docker_ubuntu_bionic/DockerFile
+++ b/.github/docker_ubuntu_bionic/DockerFile
@@ -4,7 +4,10 @@ ENV HOME /root
 
 ARG salome_download_path
 
-RUN apt-get update -y && apt-get -y install --no-install-recommends wget \
+RUN apt-get update -y && apt-get -y install --no-install-recommends \
+    software-properties-common \
+    wget \
+    build-essential \
     && rm -rf /var/lib/apt/lists/* && \
     # getting salome
     wget -nv ${salome_download_path} -O salome_dir.tar.gz && \
@@ -16,7 +19,9 @@ RUN apt-get update -y && apt-get -y install --no-install-recommends wget \
     rm -rf $HOME/salome_dir/ARCHIVES/ && \
     rm -rf $HOME/salome_dir/SOURCES/ && \
     #
-    apt-get -y remove wget && \
+    apt-get -y remove \
+        software-properties-common \
+        wget && \
     apt-get clean apt-get autoremove
 
 CMD ["${HOME}/salome_dir/salome"]
