--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -13,7 +13,7 @@ jobs:
       max-parallel: 4
       fail-fast: false
       matrix:
-        salome-version: [8-4, 8-5, 9-2, 9-3, 9-4]
+        salome-version: [8-3, 8-4, 8-5, 9-2, 9-3, 9-4]
 
     runs-on: ubuntu-18.04
 
@@ -22,12 +22,15 @@ jobs:
 
     - name: Build the Docker image for salome version ${{ matrix.salome-version }}
       run: |
-        if [ ${{ matrix.salome-version }} == 8-4 ]; then
-          export SALOME_DOWNLOAD_PATH="https://www.salome-platform.org/downloads/previous-versions/salome-v8.4.0/DownloadDistr?platform=UniBinNew2&version=8.4.0_64bit"
+        if [ ${{ matrix.salome-version }} == 8-3 ]; then
+          export SALOME_DOWNLOAD_PATH="https://www.salome-platform.org/downloads/previous-versions/salome-v8.3.0/DownloadDistr?platform=UB16.04native&version=8.3.0"
         fi
 
+        if [ ${{ matrix.salome-version }} == 8-4 ]; then
+          export SALOME_DOWNLOAD_PATH="https://www.salome-platform.org/downloads/previous-versions/salome-v8.4.0/DownloadDistr?platform=OS1.UB16.04&version=8.4.0"
+
         if [ ${{ matrix.salome-version }} == 8-5 ]; then
-          export SALOME_DOWNLOAD_PATH="https://www.salome-platform.org/downloads/previous-versions/salome-v8.5.0/DownloadDistr?platform=UniBinNew2&version=8.5.0_64bit"
+          export SALOME_DOWNLOAD_PATH="https://www.salome-platform.org/downloads/previous-versions/salome-v8.5.0/DownloadDistr?platform=OS1.UB16.04&version=8.5.0"
         fi
 
         if [ ${{ matrix.salome-version }} == 9-2 ]; then
