--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,4 +49,4 @@ jobs:
     - uses: actions/checkout@v1
 
     - name: Running tests in salome version ${{ matrix.salome-version }}
-      run: /root/salome_dir/salome -t python tests/hello_world.py
+      run: /root/salome_dir/salome -t tests/hello_world.py
