--- a/.github/docker_ubuntu_bionic/DockerFile
+++ b/.github/docker_ubuntu_bionic/DockerFile
@@ -7,6 +7,7 @@ ARG salome_download_path
 RUN apt-get update -y && apt-get -y install --no-install-recommends \
     software-properties-common \
     wget \
+    python-dev \
     build-essential \
     && rm -rf /var/lib/apt/lists/* && \
     # getting salome
