--- a/.github/docker_ubuntu_bionic/DockerFile
+++ b/.github/docker_ubuntu_bionic/DockerFile
@@ -8,7 +8,9 @@ RUN apt-get update -y && apt-get -y install --no-install-recommends \
     software-properties-common \
     wget \
     python-dev \
+    # libxml2 is required for Salome 8.3
     libxml2 \
+    # net-tools is required for Salome 8.x
     net-tools \
     build-essential \
     && rm -rf /var/lib/apt/lists/* && \
