--- a/.github/docker_ubuntu_bionic/DockerFile
+++ b/.github/docker_ubuntu_bionic/DockerFile
@@ -12,6 +12,7 @@ RUN apt-get update -y && apt-get -y install --no-install-recommends \
     libxml2 \
     # net-tools is required for Salome 8.x
     net-tools \
+    openssl \
     build-essential \
     && rm -rf /var/lib/apt/lists/* && \
     # getting salome
