--- a/.github/docker_ubuntu_bionic/DockerFile
+++ b/.github/docker_ubuntu_bionic/DockerFile
@@ -7,6 +7,7 @@ ARG salome_download_path
 RUN apt-get update -y && apt-get -y install --no-install-recommends \
     software-properties-common \
     wget \
+    # libxml2 is required for Salome 8.4 & 8.5 (install before python2)
     libssl1.0-dev \
     python-dev \
     # libxml2 is required for Salome 8.3
