--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -13,8 +13,7 @@ jobs:
       max-parallel: 4
       fail-fast: false
       matrix:
-        salome-version: [8-4, 8-5]
-        # salome-version: [8-3, 8-4, 8-5, 9-2, 9-3, 9-4]
+        salome-version: [8-3, 8-4, 8-5, 9-2, 9-3, 9-4]
 
     runs-on: ubuntu-18.04
 
