--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
       run: python tests/assert_run_not_in_salome.py
 
     - name: Running tests
-      run: python tests/hello_world.py
+      run: python tests/run_all_tests.py
 
 
   testing-in-salome:
@@ -52,8 +52,9 @@ jobs:
     steps:
     - uses: actions/checkout@v1
 
-    - name: assert run in salome
-      run: /root/salome_dir/salome -t tests/assert_run_in_salome.py
+    # FIXME can only start one salome session
+    # - name: assert run in salome
+    #   run: /root/salome_dir/salome -t tests/assert_run_in_salome.py
 
     - name: Running tests in salome version ${{ matrix.salome-version }}
-      run: /root/salome_dir/salome -t tests/hello_world.py
+      run: /root/salome_dir/salome -t tests/run_all_tests.py
