--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,4 +57,9 @@ jobs:
     #   run: /root/salome_dir/salome -t tests/assert_run_in_salome.py
 
     - name: Running tests in salome version ${{ matrix.salome-version }}
-      run: /root/salome_dir/salome -t tests/run_all_tests.py
+      run: |
+        echo ""
+        echo ""
+        /root/salome_dir/salome -t tests/run_all_tests.py
+        echo ""
+        echo ""
