--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -6,6 +6,9 @@ on:
     - '.github/docker_ubuntu_bionic/DockerFile'
     - '.github/workflows/dockerimage.yml'
 
+  schedule:
+    - cron:  '0 2 * * TUE'
+
 jobs:
 
   create-docker-ubuntu:
