--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,7 @@ on:
   push:
     paths:
     - '.github/workflows/ci.yml'
+    - '.github/run_tests_in_salome.py'
     - 'plugin/**'
     - 'tests/**'
 
