--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,4 +58,4 @@ jobs:
     #   run: /root/salome_dir/salome -t tests/assert_run_in_salome.py
 
     - name: Running tests in salome version ${{ matrix.salome-version }}
-      run: python3 /root/salome_dir/salome -t tests/run_all_tests.py
+      run: /root/salome_dir/salome -t tests/run_all_tests.py
