--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -26,27 +26,27 @@ jobs:
     - name: Build the Docker image for salome version ${{ matrix.salome-version }}
       run: |
         if [ ${{ matrix.salome-version }} == 8-3 ]; then
-          export SALOME_DOWNLOAD_PATH="https://www.salome-platform.org/downloads/previous-versions/salome-v8.3.0/DownloadDistr?platform=UB16.04native&version=8.3.0"
+          SALOME_DOWNLOAD_PATH="https://www.salome-platform.org/downloads/previous-versions/salome-v8.3.0/DownloadDistr?platform=UB16.04native&version=8.3.0"
         fi
 
         if [ ${{ matrix.salome-version }} == 8-4 ]; then
-          export SALOME_DOWNLOAD_PATH="https://www.salome-platform.org/downloads/previous-versions/salome-v8.4.0/DownloadDistr?platform=OS1.UB16.04&version=8.4.0"
+          SALOME_DOWNLOAD_PATH="https://www.salome-platform.org/downloads/previous-versions/salome-v8.4.0/DownloadDistr?platform=OS1.UB16.04&version=8.4.0"
         fi
 
         if [ ${{ matrix.salome-version }} == 8-5 ]; then
-          export SALOME_DOWNLOAD_PATH="https://www.salome-platform.org/downloads/previous-versions/salome-v8.5.0/DownloadDistr?platform=OS1.UB16.04&version=8.5.0"
+          SALOME_DOWNLOAD_PATH="https://www.salome-platform.org/downloads/previous-versions/salome-v8.5.0/DownloadDistr?platform=OS1.UB16.04&version=8.5.0"
         fi
 
         if [ ${{ matrix.salome-version }} == 9-2 ]; then
-          export SALOME_DOWNLOAD_PATH="https://www.salome-platform.org/downloads/previous-versions/salome-v9.2/DownloadDistr?platform=OS1.UB18.04&version=9.2.1"
+          SALOME_DOWNLOAD_PATH="https://www.salome-platform.org/downloads/previous-versions/salome-v9.2/DownloadDistr?platform=OS1.UB18.04&version=9.2.1"
         fi
 
         if [ ${{ matrix.salome-version }} == 9-3 ]; then
-          export SALOME_DOWNLOAD_PATH="https://www.salome-platform.org/downloads/previous-versions/salome-v9.3/DownloadDistr?platform=OS1.UB18.04&version=9.3.0"
+          SALOME_DOWNLOAD_PATH="https://www.salome-platform.org/downloads/previous-versions/salome-v9.3/DownloadDistr?platform=OS1.UB18.04&version=9.3.0"
         fi
 
         if [ ${{ matrix.salome-version }} == 9-4 ]; then
-          export SALOME_DOWNLOAD_PATH="https://www.salome-platform.org/downloads/current-version/DownloadDistr?platform=SP.UB18.04&version=9.4.0"
+          SALOME_DOWNLOAD_PATH="https://www.salome-platform.org/downloads/current-version/DownloadDistr?platform=SP.UB18.04&version=9.4.0"
         fi
 
         docker build . --file .github/docker_ubuntu_bionic/DockerFile \
