--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -16,7 +16,7 @@ jobs:
       max-parallel: 4
       fail-fast: false
       matrix:
-        salome-version: [8-3, 8-4, 8-5, 9-2, 9-3, 9-4]
+        salome-version: [8-111]
 
     runs-on: ubuntu-18.04
 
@@ -27,32 +27,19 @@ jobs:
       run: |
         if [ ${{ matrix.salome-version }} == 8-3 ]; then
           SALOME_DOWNLOAD_PATH="https://www.salome-platform.org/downloads/previous-versions/salome-v8.3.0/DownloadDistr?platform=UB16.04native&version=8.3.0"
-        fi
-
-        if [ ${{ matrix.salome-version }} == 8-4 ]; then
+        elif [ ${{ matrix.salome-version }} == 8-4 ]; then
           SALOME_DOWNLOAD_PATH="https://www.salome-platform.org/downloads/previous-versions/salome-v8.4.0/DownloadDistr?platform=OS1.UB16.04&version=8.4.0"
-        fi
-
-        if [ ${{ matrix.salome-version }} == 8-5 ]; then
+        elif [ ${{ matrix.salome-version }} == 8-5 ]; then
           SALOME_DOWNLOAD_PATH="https://www.salome-platform.org/downloads/previous-versions/salome-v8.5.0/DownloadDistr?platform=OS1.UB16.04&version=8.5.0"
-        fi
-
-        if [ ${{ matrix.salome-version }} == 9-2 ]; then
+        elif [ ${{ matrix.salome-version }} == 9-2 ]; then
           SALOME_DOWNLOAD_PATH="https://www.salome-platform.org/downloads/previous-versions/salome-v9.2/DownloadDistr?platform=OS1.UB18.04&version=9.2.1"
-        fi
-
-        if [ ${{ matrix.salome-version }} == 9-3 ]; then
+        elif [ ${{ matrix.salome-version }} == 9-3 ]; then
           SALOME_DOWNLOAD_PATH="https://www.salome-platform.org/downloads/previous-versions/salome-v9.3/DownloadDistr?platform=OS1.UB18.04&version=9.3.0"
-        fi
-
-        if [ ${{ matrix.salome-version }} == 9-4 ]; then
+        elif [ ${{ matrix.salome-version }} == 9-4 ]; then
           SALOME_DOWNLOAD_PATH="https://www.salome-platform.org/downloads/current-version/DownloadDistr?platform=SP.UB18.04&version=9.4.0"
+        else
+          exit 1
         fi
-
-        docker build . --file .github/docker_ubuntu_bionic/DockerFile \
-          --tag philbucher/ubuntu-18-04-salome-${{ matrix.salome-version }} \
-          --build-arg salome_download_path=${SALOME_DOWNLOAD_PATH}
-
 
     - name: Docker Login
       uses: azure/docker-login@v1
