--- a/.github/docker_ubuntu_bionic/DockerFile
+++ b/.github/docker_ubuntu_bionic/DockerFile
@@ -9,8 +9,8 @@ RUN apt-get update -y && apt-get -y install --no-install-recommends \
     software-properties-common wget \
     # libxml2 is required for Salome 8.4 & 8.5 (install before python2) => https://stackoverflow.com/questions/20399331/error-importing-hashlib-with-python-2-7-but-not-with-2-6#comment97786717_20419131
     libssl1.0-dev \
-    # python 2 is required to execute Salome < 9
-    python \
+    # python 2 is required to execute Salome < 9 (dev bcs 8.3 needs it)
+    python-dev \
     # if python 3 is not explicitly installed, then autoremove will remove it
     python3 \
     # libxml2 is required for Salome 8.3
