--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -27,32 +27,25 @@ jobs:
       run: |
         if [ ${{ matrix.salome-version }} == 8-3 ]; then
           SALOME_DOWNLOAD_PATH="https://www.salome-platform.org/downloads/previous-versions/salome-v8.3.0/DownloadDistr?platform=UB16.04native&version=8.3.0"
-          DOCKER_FILE_FOLDER="docker_ubuntu_bionic_py2"
         elif [ ${{ matrix.salome-version }} == 8-4 ]; then
           SALOME_DOWNLOAD_PATH="https://www.salome-platform.org/downloads/previous-versions/salome-v8.4.0/DownloadDistr?platform=OS1.UB16.04&version=8.4.0"
-          DOCKER_FILE_FOLDER="docker_ubuntu_bionic_py2"
         elif [ ${{ matrix.salome-version }} == 8-5 ]; then
           SALOME_DOWNLOAD_PATH="https://www.salome-platform.org/downloads/previous-versions/salome-v8.5.0/DownloadDistr?platform=OS1.UB16.04&version=8.5.0"
-          DOCKER_FILE_FOLDER="docker_ubuntu_bionic_py2"
         elif [ ${{ matrix.salome-version }} == 9-2 ]; then
           SALOME_DOWNLOAD_PATH="https://www.salome-platform.org/downloads/previous-versions/salome-v9.2/DownloadDistr?platform=OS1.UB18.04&version=9.2.1"
-          DOCKER_FILE_FOLDER="docker_ubuntu_bionic_py3"
         elif [ ${{ matrix.salome-version }} == 9-3 ]; then
           SALOME_DOWNLOAD_PATH="https://www.salome-platform.org/downloads/previous-versions/salome-v9.3/DownloadDistr?platform=OS1.UB18.04&version=9.3.0"
-          DOCKER_FILE_FOLDER="docker_ubuntu_bionic_py3"
         elif [ ${{ matrix.salome-version }} == 9-4 ]; then
           SALOME_DOWNLOAD_PATH="https://www.salome-platform.org/downloads/current-version/DownloadDistr?platform=SP.UB18.04&version=9.4.0"
-          DOCKER_FILE_FOLDER="docker_ubuntu_bionic_py3"
         else
           echo 'No "SALOME_DOWNLOAD_PATH" configured for version ${{ matrix.salome-version }}'
           exit 1
         fi
 
         # output configuration
-        echo "DOCKER_FILE_FOLDER:"   ${DOCKER_FILE_FOLDER}
         echo "SALOME_DOWNLOAD_PATH:" ${SALOME_DOWNLOAD_PATH}
 
-        docker build . --file .github/${DOCKER_FILE_FOLDER}/DockerFile \
+        docker build . --file .github/docker_ubuntu_bionic/DockerFile \
           --tag philbucher/ubuntu-18-04-salome-${{ matrix.salome-version }} \
           --build-arg salome_download_path=${SALOME_DOWNLOAD_PATH}
 
