--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,4 +50,5 @@ jobs:
     - uses: actions/checkout@v1
 
     - name: Running tests in salome version ${{ matrix.salome-version }}
-      run: /root/salome_dir/salome --shutdown-servers=1 -t tests/run_all_tests.py
+      # "--shutdown-servers=1" is not used bcs container is shut down right after
+      run: /root/salome_dir/salome -t tests/run_all_tests.py
