--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,3 +56,5 @@ jobs:
       run: |
         cd tests
         /root/salome_dir/salome -t run_all_tests.py
+        cd /root/salome_dir/salome/BINARIES*
+        ls
