--- a/.github/docker_ubuntu_bionic/DockerFile
+++ b/.github/docker_ubuntu_bionic/DockerFile
@@ -33,6 +33,14 @@ RUN apt-get update -y && apt-get -y install --no-install-recommends \
     rm -rf $HOME/salome_dir/BINARIES*/cppunit/ && \
     rm -rf $HOME/salome_dir/BINARIES*/MED/ && \
     rm -rf $HOME/salome_dir/BINARIES*/MEDCOUPLING/ && \
+    rm -rf $HOME/salome_dir/BINARIES*/mesa/ && \
+    rm -rf $HOME/salome_dir/BINARIES*/MeshGems/ && \
+    rm -rf $HOME/salome_dir/BINARIES*/FIELDS/ && \
+    rm -rf $HOME/salome_dir/BINARIES*/CAS/ && \
+    rm -rf $HOME/salome_dir/BINARIES*/medfile/ && \
+    rm -rf $HOME/salome_dir/BINARIES*/cmake/ && \
+    rm -rf $HOME/salome_dir/BINARIES*/YACS/ && \
+    rm -rf $HOME/salome_dir/BINARIES*/HOMARD/ && \
     # cleanup
     apt-get -y remove \
         software-properties-common wget && \
