--- a/.github/docker_ubuntu_bionic/DockerFile
+++ b/.github/docker_ubuntu_bionic/DockerFile
@@ -25,24 +25,24 @@ RUN apt-get update -y && apt-get -y install --no-install-recommends \
     # the next command might not work for all cases
     mv SALOME* $HOME/salome_dir && \
     # remove unnecessary files
-    rm -rf $HOME/salome_dir/ARCHIVES/ && \
-    rm -rf $HOME/salome_dir/SOURCES/ && \
-    # remove unnecessary binaries - be careful here, some binaries are required for testing!
-    rm -rf $HOME/salome_dir/BINARIES*/ParaView/ && \
-    rm -rf $HOME/salome_dir/BINARIES*/llvm/ && \
-    rm -rf $HOME/salome_dir/BINARIES*/cppunit/ && \
-    rm -rf $HOME/salome_dir/BINARIES*/MED/ && \
-    rm -rf $HOME/salome_dir/BINARIES*/MEDCOUPLING/ && \
-    rm -rf $HOME/salome_dir/BINARIES*/MeshGems/ && \
-    rm -rf $HOME/salome_dir/BINARIES*/FIELDS/ && \
-    rm -rf $HOME/salome_dir/BINARIES*/medfile/ && \
-    rm -rf $HOME/salome_dir/BINARIES*/cmake/ && \
-    rm -rf $HOME/salome_dir/BINARIES*/YACS/ && \
-    rm -rf $HOME/salome_dir/BINARIES*/HOMARD/ && \
-    rm -rf $HOME/salome_dir/BINARIES*/homard_bin/ && \
-    rm -rf $HOME/salome_dir/BINARIES*/PARAVIS/ && \
-    rm -rf $HOME/salome_dir/BINARIES*/HEXABLOCK/ && \
-    rm -rf $HOME/salome_dir/BINARIES*/doxygen/ && \
+    # rm -rf $HOME/salome_dir/ARCHIVES/ && \
+    # rm -rf $HOME/salome_dir/SOURCES/ && \
+    # # remove unnecessary binaries - be careful here, some binaries are required for testing!
+    # rm -rf $HOME/salome_dir/BINARIES*/ParaView/ && \
+    # rm -rf $HOME/salome_dir/BINARIES*/llvm/ && \
+    # rm -rf $HOME/salome_dir/BINARIES*/cppunit/ && \
+    # rm -rf $HOME/salome_dir/BINARIES*/MED/ && \
+    # rm -rf $HOME/salome_dir/BINARIES*/MEDCOUPLING/ && \
+    # rm -rf $HOME/salome_dir/BINARIES*/MeshGems/ && \
+    # rm -rf $HOME/salome_dir/BINARIES*/FIELDS/ && \
+    # rm -rf $HOME/salome_dir/BINARIES*/medfile/ && \
+    # rm -rf $HOME/salome_dir/BINARIES*/cmake/ && \
+    # rm -rf $HOME/salome_dir/BINARIES*/YACS/ && \
+    # rm -rf $HOME/salome_dir/BINARIES*/HOMARD/ && \
+    # rm -rf $HOME/salome_dir/BINARIES*/homard_bin/ && \
+    # rm -rf $HOME/salome_dir/BINARIES*/PARAVIS/ && \
+    # rm -rf $HOME/salome_dir/BINARIES*/HEXABLOCK/ && \
+    # rm -rf $HOME/salome_dir/BINARIES*/doxygen/ && \
     # cleanup
     apt-get -y remove \
         software-properties-common wget && \
