--- a/.github/docker_ubuntu_bionic/DockerFile
+++ b/.github/docker_ubuntu_bionic/DockerFile
@@ -17,6 +17,8 @@ RUN apt-get update -y && apt-get -y install --no-install-recommends \
     libxml2 \
     # net-tools is required for Salome 9.x
     net-tools \
+    # needed by the GEOM module (see https://github.com/tianyikillua/code_aster_on_docker/issues/4)
+    libglu1-mesa libxmu6 \
     && rm -rf /var/lib/apt/lists/* && \
     # getting salome
     wget -nv ${salome_download_path} -O salome_dir.tar.gz && \
