--- a/.github/docker_ubuntu_bionic/DockerFile
+++ b/.github/docker_ubuntu_bionic/DockerFile
@@ -20,12 +20,12 @@ RUN apt-get update -y && apt-get -y install --no-install-recommends \
     # needed by the GEOM module (see https://github.com/tianyikillua/code_aster_on_docker/issues/4)
     libglu1-mesa libxmu6 \
     # install libpng16
-    libpng16-16 \
-    && rm -rf /var/lib/apt/lists/* && \
+    libpng16-16 && \
+    rm -rf /var/lib/apt/lists/* && \
     # get & install libpng12
     wget https://launchpad.net/~ubuntu-security/+archive/ubuntu/ppa/+build/15108504/+files/libpng12-0_1.2.54-1ubuntu1.1_amd64.deb -O libpng12.deb && \
     sudo apt install libpng12.deb && \
-    && rm -rf /var/lib/apt/lists/* && \
+    rm -rf /var/lib/apt/lists/* && \
     rm libpng12.deb && \
     # getting salome
     wget -nv ${salome_download_path} -O salome_dir.tar.gz && \
