--- a/.github/docker_ubuntu_bionic/DockerFile
+++ b/.github/docker_ubuntu_bionic/DockerFile
@@ -23,10 +23,10 @@ RUN apt-get update -y && apt-get -y install --no-install-recommends \
     libpng16-16 && \
     rm -rf /var/lib/apt/lists/* && \
     # get & install libpng12
-    wget https://launchpad.net/~ubuntu-security/+archive/ubuntu/ppa/+build/15108504/+files/libpng12-0_1.2.54-1ubuntu1.1_amd64.deb -O libpng12.deb && \
-    apt install libpng12.deb && \
+    wget https://launchpad.net/~ubuntu-security/+archive/ubuntu/ppa/+build/15108504/+files/libpng12-0_1.2.54-1ubuntu1.1_amd64.deb -O $HOME/libpng12.deb && \
+    apt install $HOME/libpng12.deb && \
     rm -rf /var/lib/apt/lists/* && \
-    rm libpng12.deb && \
+    rm $HOME/libpng12.deb && \
     # getting salome
     wget -nv ${salome_download_path} -O salome_dir.tar.gz && \
     tar xzf salome_dir.tar.gz && \
