--- a/.github/docker_ubuntu_bionic/DockerFile
+++ b/.github/docker_ubuntu_bionic/DockerFile
@@ -17,7 +17,7 @@ RUN apt-get update -y && apt-get -y install --no-install-recommends \
     libxml2 \
     libfreeimage-dev \
     libfreetype6-dev \
-    libboost-dev \
+    libboost1.58-dev \
     # net-tools is required for Salome 9.x
     net-tools \
     # libgfortran
