--- a/.github/workflows/check_salome_execution.yml
+++ b/.github/workflows/check_salome_execution.yml
@@ -2,7 +2,7 @@
 name: Test running inside salome detection
 
 on:
-  push:
+  pull_request:
     paths:
     - '.github/workflows/check_salome_execution.yml'
     - '.github/assert_run_in_salome.py'
