--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -46,7 +46,7 @@ jobs:
 
         docker build . --file .github/docker_ubuntu_bionic/DockerFile \
           --tag philbucher/ubuntu-18-04-salome-${{ matrix.salome-version }} \
-          --build-arg salome_download_path=${SALOME_DOWNLOAD_PATH}
+          --build-arg salome_download_path=${SALOME_DOWNLOAD_PATH} --no-cache
 
     - name: Docker Login
       uses: azure/docker-login@v1
