--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        salome-version: [8-3, 8-4, 8-5, 9-2, 9-3, 9-4]
+        salome-version: [9-3, 9-4]
 
     runs-on: ubuntu-18.04
 
@@ -24,15 +24,7 @@ jobs:
 
     - name: Build the Docker image for salome version ${{ matrix.salome-version }}
       run: |
-        if [ ${{ matrix.salome-version }} == 8-3 ]; then
-          SALOME_DOWNLOAD_PATH="https://www.salome-platform.org/downloads/previous-versions/salome-v8.3.0/DownloadDistr?platform=UB16.04&version=8.3.0"
-        elif [ ${{ matrix.salome-version }} == 8-4 ]; then
-          SALOME_DOWNLOAD_PATH="https://www.salome-platform.org/downloads/previous-versions/salome-v8.4.0/DownloadDistr?platform=OS1.UB16.04&version=8.4.0"
-        elif [ ${{ matrix.salome-version }} == 8-5 ]; then
-          SALOME_DOWNLOAD_PATH="https://www.salome-platform.org/downloads/previous-versions/salome-v8.5.0/DownloadDistr?platform=OS1.UB16.04&version=8.5.0"
-        elif [ ${{ matrix.salome-version }} == 9-2 ]; then
-          SALOME_DOWNLOAD_PATH="https://www.salome-platform.org/downloads/previous-versions/salome-v9.2/DownloadDistr?platform=OS1.UB18.04&version=9.2.1"
-        elif [ ${{ matrix.salome-version }} == 9-3 ]; then
+        if [ ${{ matrix.salome-version }} == 9-3 ]; then
           SALOME_DOWNLOAD_PATH="https://www.salome-platform.org/downloads/previous-versions/salome-v9.3/DownloadDistr?platform=OS1.UB18.04&version=9.3.0"
         elif [ ${{ matrix.salome-version }} == 9-4 ]; then
           SALOME_DOWNLOAD_PATH="https://www.salome-platform.org/downloads/current-version/DownloadDistr?platform=SP.UB18.04&version=9.4.0"
@@ -65,7 +57,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        salome-version: [8-3, 8-4, 8-5, 9-2, 9-3, 9-4]
+        salome-version: [9-3, 9-4]
 
     runs-on: ubuntu-18.04
 
@@ -91,7 +83,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        salome-version: [8-3, 8-4, 8-5, 9-2, 9-3, 9-4]
+        salome-version: [9-3, 9-4]
 
     runs-on: ubuntu-18.04
 
