revert to call salome directly

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,6 +49,7 @@ jobs:
     - uses: actions/checkout@v1
 
     - name: Running tests in salome version ${{ matrix.salome-version }}
+      # "--shutdown-servers=1" is not used bcs container is shut down right after
       run: |
         cd tests
-        python3 execute_in_salome.py /root/salome_dir/salome run_all_tests.py
+        /root/salome_dir/salome -t run_all_tests.py
