--- a/.github/workflows/check_salome_execution.yml
+++ b/.github/workflows/check_salome_execution.yml
@@ -31,7 +31,7 @@ jobs:
     - name: assert run not in salome
       run:  |
         cd .github
-        python .github/assert_run_in_salome.py 0
+        python assert_run_in_salome.py 0
 
 
   check-salome-execution-detection:
@@ -52,6 +52,4 @@ jobs:
     - name: assert run in salome
       # given as string bcs some keywords are also recognized by yaml
       # "--shutdown-servers=1" is not used bcs container is shut down right after
-      run:  |
-        cd .github
-        "/root/salome_dir/salome -t .github/assert_run_in_salome.py args:1"
+      run: "/root/salome_dir/salome -t .github/assert_run_in_salome.py args:1"
