bring back execute_in_salome Might be helpful later

--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -71,7 +71,7 @@ jobs:
       # "--shutdown-servers=1" is not used bcs container is shut down right after
       run: |
         cd tests
-        /root/salome_dir/salome -t run_all_tests.py
+        python3 execute_in_salome.py /root/salome_dir/salome run_all_tests.py
 
 
   check-salome-execution-detection:
