--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,9 @@
 *.log*
 
 # excluding the example files
-standalone_usage/**/*.mdpa
-standalone_usage/**/*.hdf
-standalone_usage/**/*.vtk
+standalone_tui_usage/**/*.mdpa
+standalone_tui_usage/**/*.hdf
+standalone_tui_usage/**/*.vtk
 
 
 ##### FROM TEMPLATE: #####
